--- a/fix_links.html
+++ b/fix_links.html
@@ -5,9 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
     <meta name="author" content="Davis Ford">
-    <link rel="icon" href="../../favicon.ico">
 	<script src="js/jquery-2.1.3.min.js" type="text/javascript"></script>
     <script src="js/string.min.js" type="text/javascript"></script>
 	<script src="js/fix_links.js" type="text/javascript"></script>
@@ -308,7 +306,11 @@
     </div> <!-- /container -->
 
 
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
   </body>
+  <footer>
+    <script src="js/jquery-2.1.3.min.js" type="text/javascript"></script>
+    <script src="js/string.min.js" type="text/javascript"></script>
+	<script src="js/fix_links.js" type="text/javascript"></script>
+    <script src="js/jquery-ui-1.11.2.custom/jquery-ui.min.js" type="text/javascript"></script>
+  </footer>
 </html>
