lots of changes, added css, boxes, failure logic

--- a/fix_links - Copy.html
+++ b/fix_links - Copy.html
@@ -45,17 +45,18 @@
         <label for="product">Select a Product</label>
     			<select name="product" id="product">
       				<option value="USR">Ultimate Self Reliance Mega Manual</option>
+                    <option value="MSR">Medical Self Reliance Mega Manual</option>
+                    <option value="XCOM">Extreme Weather Combo - Food/Manual</option>
+                    <option value="LPL">Low Profile Living Manual</option>
+                    <option value="FFL">Freedom Fortress Library</option>
       				<option value="GAB">Great American Blackout</option>
       				<option value="SUB" selected="selected">Digital Newsletter Subscription</option>
       				<option value="PW">Power Whisperer</option>
       				<option value="FOOD">30 Day Emergency Food Reserve</option>
       				<option value="CSG">Colloidal Silver Generator Kit</option>
-      				<option value="LPL">Low Profile Living Manual</option>
       				<option value="EPACK">Emergency Pack</option>
       				<option value="STREK">Sun Trek</option>
-      				<option value="MSR">Medical Self Reliance Mega Manual</option>
                     <option value="CAN">Survival Kit in a Can</option>
-                    <option value="FFL">Freedom Fortress Library</option>
       		    </select>
         </div>
         </div>
@@ -260,6 +261,11 @@
             <input type="text" name="14" class="form-control" aria-describedby="addon14" id="FFL" value="http://www.independentlivingnews.com/video/ffl-video.php" size="50">
             </div>
             
+            <div class="input-group">
+            <span class="input-group-addon" id="addon15">Extreme Weather Combo - 30 Day Maximum Shelf Life Food Reserve</span>
+            <input type="text" name="15" class="form-control" aria-describedby="addon15" id="FFL" value="http://www.survivalproshop.com/extreme-weather-combo-30-day-maximum-shelf-life-food-reserve.html" size="50">
+            </div>
+            
             </form>
         </div>
       </div>
@@ -297,6 +303,7 @@
                     <li>FFL - Freedom Fortress Library</li>
       				<!--<li>GUN - Gun Control Poll</li>-->
       				<li>LPL - Low Profile Living Manual</li>
+                    <li>XCOM - Extreme Weather Combo</li>
       				<!--<li>ODD - 97 Covert Tactics to Sidestep Obama Dollar Debacle</li>-->
                     <li>FOOD - 30 Day Emergency Food Reserve</li>
       				<li>STREK - Sun Trek</li>
