--- a/fix_links.html
+++ b/fix_links.html
@@ -206,7 +206,7 @@
 
       <div class="row" id="productLinks">
         <div class="col-md-12">
-        <center><p>PRODUCT LINKS</p></center>
+        <center><h3>PRODUCT LINKS</h3></center>
          <form id="productForm">
          	<div class="input-group">
          	<span class="input-group-addon" id="addon1">Ultimate Self Reliance Mega Manual</span>
