--- a/fix_links.html
+++ b/fix_links.html
@@ -92,7 +92,8 @@
            <center>STEP 5<br>
            <input type="submit" value="Generate Keycode" id="submitKeycode"><br>
            <img src="images/click_here_up.png" width="104" height="69">
-           </center>
+           </center><br>
+           <span id="clickme">CLICKME</span>
 		</form>  		
           </div>
        </div>
