--- a/fix_links.html
+++ b/fix_links.html
@@ -6,10 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="Davis Ford">
-	<script src="js/jquery-2.1.3.min.js" type="text/javascript"></script>
-    <script src="js/string.min.js" type="text/javascript"></script>
-	<script src="js/fix_links.js" type="text/javascript"></script>
-    <script src="js/jquery-ui-1.11.2.custom/jquery-ui.min.js" type="text/javascript"></script>
+    
+    <!--jQuery UI CSS. If I were really hurting for performance, this whole page would be minified.-->
     <link href="js/jquery-ui-1.11.2.custom/jquery-ui.min.css" rel="stylesheet" type="text/css" />
     <link href="js/jquery-ui-1.11.2.custom/jquery-ui.theme.min.css" rel="stylesheet" type="text/css" />
 
@@ -17,7 +15,6 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    
     <link href="css/grid.css" rel="stylesheet">
 
 
@@ -93,7 +90,8 @@
            <input type="submit" value="Generate Keycode" id="submitKeycode"><br>
            <img src="images/click_here_up.png" width="104" height="69">
            </center><br>
-           <span id="clickme">CLICKME</span>
+          <!-- Not using this at the moment.
+          <span id="clickme">CLICKME</span> -->
 		</form>  		
           </div>
        </div>
@@ -324,13 +322,13 @@
       				<li>CSG - Colloidal Silver Generator Kit</li>
                     <li>CAN - Survival Kit in a Can</li>
                     <li>FFL - Freedom Fortress Library</li>
-      				<!--<li>GUN - Gun Control Poll</li>-->
       				<li>LPL - Low Profile Living Manual</li>
-      				<!--<li>ODD - 97 Covert Tactics to Sidestep Obama Dollar Debacle</li>-->
                     <li>XCOM - Extreme Weather Combo</li>
                     <li>FOOD - 30 Day Emergency Food Reserve</li>
       				<li>STREK - Sun Trek</li>
                     <li>EPACK - Emergency Pack</li>
+                    <!--<li>GUN - Gun Control Poll</li>-->
+                    <!--<li>ODD - 97 Covert Tactics to Sidestep Obama Dollar Debacle</li>-->
                     </ul>
                     </ul>
                  </ul>
@@ -345,7 +343,7 @@
 
   </body>
   <footer>
-    <script src="js/jquery-2.1.3.min.js" type="text/javascript"></script>
+	<script src="js/jquery-2.1.3.min.js" type="text/javascript"></script>
     <script src="js/string.min.js" type="text/javascript"></script>
 	<script src="js/fix_links.js" type="text/javascript"></script>
     <script src="js/jquery-ui-1.11.2.custom/jquery-ui.min.js" type="text/javascript"></script>
