--- a/fix_links.html
+++ b/fix_links.html
@@ -55,7 +55,7 @@
         				<option value="ILN" selected="selected">ILN</option>
         				<option value="RFAR">RFAR</option>
    				 	</select>
-                    </center>
+          </center>
           </div>
           
           <div class="col-md-2 col-sm-6 col-xs-6">
@@ -155,7 +155,7 @@
 		</div>
         <div class="col-md-4" id="instructions">
           <h2>Instructions</h2>
-          <p class="text-warning">This script requires a valid keycode. It will not stop you from doing stupid things like bad links, blank spaces, etc. It is very basic.</p>
+          <p class="text-warning">This script requires a valid keycode.</p>
           <p>You must input a Keycode and at least one link for this tool to work.</p>
           <p>Keycode Format: (Date)(List)(Email)(Product)</p>
           <p>If you manage to break something, tell me about it in #wjmasupport</p>
