--- a/fix_links.html
+++ b/fix_links.html
@@ -344,7 +344,7 @@
 
   </body>
   <footer>
-	<script src="js/jquery-2.1.3.min.js" type="text/javascript"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="js/string.min.js" type="text/javascript"></script>
 	<script src="js/fix_links.js" type="text/javascript"></script>
     <script src="js/jquery-ui-1.11.2.custom/jquery-ui.min.js" type="text/javascript"></script>
