--- a/fix_links.html
+++ b/fix_links.html
@@ -210,7 +210,7 @@
          <form id="productForm">
          	<div class="input-group">
          	<span class="input-group-addon" id="addon1">Ultimate Self Reliance Mega Manual</span>
-            <input type="text" id="USR" name="1" value="http://www.independentlivingnews.com/video/usr-video-3p.php"  class="form-control" aria-describedby="addon1">
+            <input type="text" id="USR" name="1" value="http://www.independentlivingnews.com/video/usr-vsl.php"  class="form-control" aria-describedby="addon1">
             </div>
             
             <div class="input-group">
